tests/fixtures/valid_programs/hello_world.rzn
// tests/fixtures/valid_programs/hello_world.rzn
// Simple hello world program

fun main() -> int {
    return 42
}
